--- a/nossotime.html
+++ b/nossotime.html
@@ -9,6 +9,8 @@
 
     <style>
 
+        @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Yeseva+One&display=swap');
+
         body {
             background: #FFFBF5;
             margin: 0px;
@@ -32,8 +34,14 @@
             text-align:center;
         }
 
-        #header p, h1, a {
+        h1, h2 {
+            font-family: 'Yeseva One', cursive;
+            color:#674188;;
+        }
+
+        p, a, span {
             color: #FFFBF5;
+            font-family: 'Josefin Sans', sans-serif;
         }
 
         #icon {
@@ -65,7 +73,9 @@
             float:left;
             width:150px;
             height:150px;
-            padding-right:10px;
+            margin-right:10px;
+            border-radius: 4px;
+            border: 2px #674188 solid;
         }
 
         .receita-fav {
@@ -83,8 +93,14 @@
             float:left;
             width:150px;
             height:150px;
-            padding-right:10px;
-            padding-bottom:10px;
+            margin-right:10px;
+            border-radius: 4px;
+            border: 2px #674188 solid;
+        }
+
+        span {
+            color:#674188;
+            font-size:17px;
         }
 
     </style>
@@ -94,7 +110,7 @@
 
     <div id="header">
         <img style="float:left;width:60px;" src="https://cdn-icons-png.flaticon.com/512/857/857681.png">
-        <h1>PANELA SINGELA</h1>
+        <h1 style="color:#FFFBF5;">PANELA SINGELA</h1>
         <div id="menuNav">
             <p>página inicial | receitas | nosso time | usuário | registro | log in</p>
         </div>
@@ -106,7 +122,7 @@
         <h1>NOSSO TIME!</h1>
 
         <div class="biografia">
-            <img src="https://s2-g1.glbimg.com/r5eHWhUZHWi7kQZDeZiudS8kBWo=/0x0:1080x1080/1008x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2023/X/o/kqGgMVTjWUrDOWyvALjA/2023-08-25t004827z-824668202-rc2ou2apcic7-rtrmadp-3-usa-trump-georgia.jpg">
+            <img src="https://i.postimg.cc/ncQr5wK2/Untitled201-20230926134652.png">
             <h1>JOSÉ ARCADIO BUENDÍA</h1>
             <span>
                Patriarca da família Buendía e fundador da cidade de Macondo, casou-se com sua prima 
@@ -120,50 +136,61 @@
         <div class="receita-fav">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4NR1_BSUNt1W5HBtZ6KjMqatSPCGKYOnGAg&usqp=CAU">
             <h1>ESPECIALIDADE DO CHEFE</h1>
-            <h2>Diarréia no Copo!</h2>
-            <span>nhammmmm >__< um banquete desses slk ! que delicia ! </span>
+            <h2>Diarréia no Copo (Suco Detox)</h2>
+            <span>
+            "Ah, o suco detox, essa elixir mágico que nos chega como um enigma do tempo e do universo! Nele, vislumbro a 
+            alquimia da natureza, onde frutas e ervas se entrelaçam em uma dança esotérica. Um líquido capaz de destilar 
+            os segredos ocultos de nosso corpo, liberando-nos das correntes do quotidiano, levando-nos ao desconhecido. 
+            Como a alvorada da alquimia, esse suco nos convida a explorar os mistérios do corpo e do espírito, onde a 
+            redenção aguarda aqueles que se atrevem a saboreá-lo."</span>
         </div>
 
         <p>descanso</p>
 
         <div class="biografia">
-            <img src="https://s2-g1.glbimg.com/r5eHWhUZHWi7kQZDeZiudS8kBWo=/0x0:1080x1080/1008x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2023/X/o/kqGgMVTjWUrDOWyvALjA/2023-08-25t004827z-824668202-rc2ou2apcic7-rtrmadp-3-usa-trump-georgia.jpg">
-            <h1>JOSÉ ARCADIO BUENDÍA</h1>
+            <img src=https://i.postimg.cc/mkbFY31M/Untitled201-20230926134719.png">
+            <h1>REBECA</h1>
             <span>
-               Patriarca da família Buendía e fundador da cidade de Macondo, casou-se com sua prima 
-               Úrsula Iguarán aos 19 anos. Homem empreendedor, de caráter forte, alimentado por sonhos extravagantes, 
-               interessa-se por física, alquimia e mecânica. Após ter enlouquecido, foi amarrado a uma árvore à 
-               qual permaneceu preso, mesmo após ter sido libertado das cordas que o amarravam. Atualmente, a culinária
-               foi o que lhe restou.
+                Filha adotiva de Úrsula e José Arcadio. Chega a Macondo procedente de uma cidade vizinha, tendo perdido seu pai e sua 
+                mãe, que embora José Arcádio Buendía e Úrsula Iguarán não se lembrem, teriam conhecido há muito tempo atrás, assim 
+                como afirma a misteriosa carta que Rebeca trazia consigo na chegada a Macondo. Trouxe também da aldeia o estranho 
+                hábito de comer terra quando se sentia aflita e desesperada. Traz sua personalidade única para a cozinha!
             </span>
 
         </div>
         <div class="receita-fav">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4NR1_BSUNt1W5HBtZ6KjMqatSPCGKYOnGAg&usqp=CAU">
             <h1>ESPECIALIDADE DO CHEFE</h1>
-            <h2>Diarréia no Copo!</h2>
-            <span>nhammmmm >__< um banquete desses slk ! que delicia ! </span>
+            <h2>A Morte Dela (Bolo de Mortadela)</h2>
+            <span>"Ah, o bolo de mortadela, uma criação que desafia os limites do razoável e das expectativas gastronômicas! Um enigma 
+                comestível que rompe com as convenções culinárias, misturando a simplicidade de um pão com a audácia da mortadela. 
+                Em sua mistura, vejo um convite ao desconhecido, uma jornada intrépida pelos caminhos inexplorados do sabor. Como a 
+                alquimia das palavras em um romance inacabado, este bolo desafia a lógica e nos faz questionar o que é possível quando 
+                se trata de arte na cozinha."</span>
         </div>
 
         <p>descanso</p>
 
         <div class="biografia">
-            <img src="https://s2-g1.glbimg.com/r5eHWhUZHWi7kQZDeZiudS8kBWo=/0x0:1080x1080/1008x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2023/X/o/kqGgMVTjWUrDOWyvALjA/2023-08-25t004827z-824668202-rc2ou2apcic7-rtrmadp-3-usa-trump-georgia.jpg">
-            <h1>JOSÉ ARCADIO BUENDÍA</h1>
+            <img src="https://i.postimg.cc/x8n9pnQN/Untitled201-20230926134702.png">
+            <h1>CORONEL AURELIANO BUENDÍA</h1>
             <span>
-               Patriarca da família Buendía e fundador da cidade de Macondo, casou-se com sua prima 
-               Úrsula Iguarán aos 19 anos. Homem empreendedor, de caráter forte, alimentado por sonhos extravagantes, 
-               interessa-se por física, alquimia e mecânica. Após ter enlouquecido, foi amarrado a uma árvore à 
-               qual permaneceu preso, mesmo após ter sido libertado das cordas que o amarravam. Atualmente, a culinária
-               foi o que lhe restou.
+                Segundo filho de José Arcádio Buendía e Úrsula, é batizado com o nome do bisavô (o avô de José Arcádio). 
+                Se envolve com a política ao tentar impedir o Sr. Apolinar Moscote de pintar todas as casas de azul a 
+                mando do governo. Conhece Remedios Moscote e se apaixona. Casam-se, apesar da grande diferença de idade. 
+                Mais tarde, torna-se o Coronel Aureliano Buendía, ao participar da guerra ao lado dos liberais. Morrerá
+                sozinho em casa, muitos anos depois, fazendo peixinhos de ouro. Enquanto seu falecimento não chega, resolveu
+                se dedicar, juntamente com a família, à culinária inconvencional.
             </span>
 
         </div>
         <div class="receita-fav">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4NR1_BSUNt1W5HBtZ6KjMqatSPCGKYOnGAg&usqp=CAU">
             <h1>ESPECIALIDADE DO CHEFE</h1>
-            <h2>Diarréia no Copo!</h2>
-            <span>nhammmmm >__< um banquete desses slk ! que delicia ! </span>
+            <h2>Pepino Passion: Cheesecake Cucumbrês</h2>
+            <span>"É uma fusão que transcende o comum, um paradoxo culinário que me faz refletir sobre as fronteiras tênues 
+                entre a genialidade e a insanidade. Talvez, em meio a essa audaciosa mistura, resida o segredo da eternidade 
+                ou, quem sabe, um novo capítulo na história gastronômica dos Buendía."</span>
         </div>
     </div>
 
