--- a/receitas/rollmops.html
+++ b/receitas/rollmops.html
@@ -162,6 +162,8 @@
                       <li><a href="rollmops.html">Rollmops</a></li>
                       <li><a href="mortadela.html">Mortadela</a></li>
                       <li><a href="cabelo.html">Tempero Especial</a></li>
+                      <li><a href="diarreia.html">Diarreia no Copo</a></li>
+                      <li><a href="picole.html">Picolé de Sopa</a></li>
                     </ul>
                   </div>
                 | 
@@ -179,13 +181,13 @@
             <div style="width: 370px; height: 70px; align-items: center; margin: auto;"> 
                 <div class="itens">
                     <p style="font-family: 'Yeseva One';">
-                    <img class="icones" src="relogiopng.png">
-                    120 HORAS  
-                    <img class="icones" src="https://i.pinimg.com/originals/78/65/8d/78658d3b6047f1bbb27f8a45c62b0b0e.png">
-                    4,5/5  
-                    <img class="icones" src="caverapng.png">
-                    100%  
-                    </p>
+                        <img class="icones" src="https://i.pinimg.com/originals/bc/fe/21/bcfe21cd68c1f06f8ac8cf273f0d0bd6.png">
+                        3h 30 min 
+                        <img class="icones" src="https://www.svgrepo.com//show/3287/stars.svg">
+                        0,5/5  
+                        <img class="icones" src="https://www.freeiconspng.com/thumbs/skull-icon/healthcare-skull-icon-5.png">
+                        70%
+                        </p>
                 </div>
             </div>
         <p style="color:#674188;">Por: Rebeca</p>
