--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             padding: 0px;
             border: 0;
             font-size: 15px;
-        }
+            opacity: 0;
+            transition: opacity 2s;
+            -webkit-transition: opacity 2s; /* Safari */
+        } 
 
         #header {
         background-color: #674188;
@@ -125,7 +128,7 @@
     </style>
 </head>
 
-<body>
+<body onload="document.body.style.opacity='1'">
 
     <div id="header">
         <img style="float:left;height:100px;" src="https://i.postimg.cc/sxpN6vYp/logooo-Photo-Room-png-Photo-Room.png">
