--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
     menu.style.display = (menu.style.display === 'block') ? 'none' : 'block';
     });
 </script>
+    <script>
+    window.onload = function() {
+        document.body.style.opacity = '1';
+    };
+</script>
+
 </body>
 
 </html>
