--- a/nossotime.html
+++ b/nossotime.html
@@ -255,10 +255,15 @@
         <p>꘎♡━━━━━♡꘎<br><br></p>
     </div>
     <script>
-        document.getElementById('toggleReceitas').addEventListener('click', function() {
-        const menu = document.getElementById('receitas');
-        menu.style.display = (menu.style.display === 'block') ? 'none' : 'block';
-        });
+    document.getElementById('toggleReceitas').addEventListener('click', function() {
+    const menu = document.getElementById('receitas');
+    menu.style.display = (menu.style.display === 'block') ? 'none' : 'block';
+    });
+</script>
+    <script>
+    window.onload = function() {
+        document.body.style.opacity = '1';
+    };
     </script>
 </body>
 
