--- a/receitas/diarreia.html
+++ b/receitas/diarreia.html
@@ -222,12 +222,17 @@
         <p>꘎♡━━━━━♡꘎<br><br></p>
         </div>
 
-        <script>
-            document.getElementById('toggleReceitas').addEventListener('click', function() {
-            const menu = document.getElementById('receitas');
-            menu.style.display = (menu.style.display === 'block') ? 'none' : 'block';
-            });
-        </script>
+<script>
+    document.getElementById('toggleReceitas').addEventListener('click', function() {
+    const menu = document.getElementById('receitas');
+    menu.style.display = (menu.style.display === 'block') ? 'none' : 'block';
+    });
+</script>
+    <script>
+    window.onload = function() {
+        document.body.style.opacity = '1';
+    };
+    </script>
 
 </body>
 
