--- a/nossotime.html
+++ b/nossotime.html
@@ -176,8 +176,7 @@
                     </ul>
                   </div>
                 | 
-                <a style="color:#FFFBF5;" href="nossotime.html">nosso time</a>
-                 | usuário | registro | log in</span>
+                <a style="color:#FFFBF5;" href="nossotime.html">nosso time</a></span>
         </div>
     </div>
 
